--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "graphql": "^0.6.1",
-    "graphql-tools": "^0.6.0"
+    "graphql-tools": "^0.6.0",
+    "request": "^2.73.0"
   }
 }
