--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && node ./dist/index.js",
     "dev": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings i"
+    "postinstall": "typings install"
   },
   "keywords": [
     "Apollo-Stack",
