--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "apollo-server": "^0.1.5",
     "body-parser": "^1.15.2",
+    "dataloader": "^1.2.0",
     "express": "^4.14.0",
     "graphql": "^0.6.1",
     "graphql-tools": "^0.6.0",
