--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typings": "^1.3.1"
   },
   "dependencies": {
-    "apollo-server": "^0.1.5",
+    "apollo-server": "^0.2.0-rc.1",
     "body-parser": "^1.15.2",
     "dataloader": "^1.2.0",
     "express": "^4.14.0",
