--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "tslint src/**/*",
     "start": "npm run build && node ./dist/index.js",
     "dev": "nodemon ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "Apollo-Stack",
@@ -17,22 +16,24 @@
   ],
   "author": "Nick Nance",
   "license": "ISC",
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.5.3",
-    "nodemon": "^1.9.2",
-    "tslint": "^3.13.0",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.1"
-  },
   "dependencies": {
-    "apollo-server": "^0.2.1",
-    "body-parser": "^1.15.2",
-    "dataloader": "^1.2.0",
-    "express": "^4.14.0",
-    "graphql": "^0.6.1",
-    "graphql-tools": "^0.6.0",
-    "hapi": "^14.1.0",
-    "request": "^2.73.0"
+    "body-parser": "^1.17.2",
+    "dataloader": "^1.3.0",
+    "express": "^4.15.3",
+    "graphql": "^0.9.6",
+    "graphql-server-express": "^0.7.2",
+    "graphql-server-hapi": "^0.7.2",
+    "graphql-tools": "^0.11.0",
+    "hapi": "^16.1.1",
+    "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.16.3",
+    "@types/express": "^4.0.35",
+    "@types/graphql": "^0.9.1",
+    "nodemon": "^1.11.0",
+    "rimraf": "^2.6.1",
+    "tslint": "^5.3.2",
+    "typescript": "^2.3.3"
   }
 }
