--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Nick Nance",
   "license": "ISC",
   "dependencies": {
+    "@creditkarma/graphql-loader": "^0.3.0",
     "body-parser": "^1.17.2",
     "dataloader": "^1.3.0",
     "express": "^4.15.3",
