--- a/packages/planets/package.json
+++ b/packages/planets/package.json
@@ -27,8 +27,8 @@
     "chai": "^4.0.2",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
+    "replayer": "^2.1.3",
     "rimraf": "^2.6.1",
-    "sepia": "^2.0.2",
     "tslint": "^5.3.2",
     "typescript": "^2.3.3"
   },
