--- a/packages/planets/package.json
+++ b/packages/planets/package.json
@@ -18,13 +18,17 @@
   "author": "Nick Nance",
   "license": "ISC",
   "dependencies": {
-    "@creditkarma/graphql-loader": "^0.3.0"
+    "@creditkarma/graphql-loader": "^0.3.0",
+    "dataloader": "^1.3.0",
+    "graphql-tools": "^1.1.0",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "@types/chai": "^4.0.0",
     "@types/debug": "0.0.29",
     "@types/graphql": "^0.9.1",
     "@types/mocha": "^2.2.41",
+    "@types/request": "0.0.45",
     "chai": "^4.0.2",
     "debug": "^2.6.8",
     "mocha": "^3.4.2",
