--- a/packages/planets/package.json
+++ b/packages/planets/package.json
@@ -21,7 +21,8 @@
     "@creditkarma/graphql-loader": "^0.3.0",
     "dataloader": "^1.3.0",
     "graphql-tools": "^1.1.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "swapi-apollo-types": "^0.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.0.0",
