--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,21 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceRoot}/dist/index.js",
+            "name": "Launch Schema Tests",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "args": ["${workspaceRoot}/packages/schema/dist/index.test.js"],
             "outFiles": [
-                "${workspaceRoot}/dist/**/*.js"
+                "${workspaceRoot}/packages/schema/dist/**/*.js"
+            ],
+            "sourceMaps": true
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "program": "${workspaceRoot}/packages/server/dist/index.js",
+            "outFiles": [
+                "${workspaceRoot}/packages/server/dist/**/*.js"
             ],
             "sourceMaps": true
         }
