--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "An Apollo server wrapping SWAPI",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "prebootstrap": "npm install",
+    "postinstall": "lerna bootstrap",
+    "build": "lerna exec -- npm run build",
     "lint": "tslint src/**/*",
     "start": "npm run build && node ./dist/index.js",
     "dev": "nodemon ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "lerna publish"
   },
   "keywords": [
     "Apollo-Stack",
@@ -16,22 +19,9 @@
   ],
   "author": "Nick Nance",
   "license": "ISC",
-  "dependencies": {
-    "@creditkarma/graphql-loader": "^0.3.0",
-    "body-parser": "^1.17.2",
-    "dataloader": "^1.3.0",
-    "express": "^4.15.3",
-    "graphql": "^0.9.6",
-    "graphql-server-express": "^0.7.2",
-    "graphql-server-hapi": "^0.7.2",
-    "graphql-tools": "^0.11.0",
-    "hapi": "^16.1.1",
-    "request": "^2.81.0"
-  },
   "devDependencies": {
-    "@types/body-parser": "^1.16.3",
-    "@types/express": "^4.0.35",
-    "@types/graphql": "^0.9.1",
+    "lerna": "^2.0.0-rc.5",
+    "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "rimraf": "^2.6.1",
     "tslint": "^5.3.2",
