--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,11 @@
   "author": "Nick Nance",
   "license": "ISC",
   "dependencies": {
-    "@creditkarma/graphql-loader": "^0.5.0",
+    "@creditkarma/graphql-loader": "^0.6.2",
     "body-parser": "^1.17.2",
     "dataloader": "^1.3.0",
     "deepmerge": "^1.5.0",
     "express": "^4.15.3",
-    "graphql": "^0.10.0",
     "graphql-server-express": "^0.7.2",
     "graphql-server-hapi": "^0.7.2",
     "graphql-tools": "^0.11.0",
@@ -40,5 +39,8 @@
     "rimraf": "^2.6.1",
     "tslint": "^5.3.2",
     "typescript": "^2.3.3"
+  },
+  "peerDependencies": {
+    "graphql": "^0.10.0"
   }
 }
