--- a/package.json
+++ b/package.json
@@ -21,12 +21,22 @@
   "author": "Nick Nance",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.16.4",
+    "@types/chai": "^4.0.0",
+    "@types/debug": "0.0.29",
+    "@types/express": "^4.0.36",
+    "@types/graphql": "^0.10.0",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^8.0.9",
+    "@types/request": "0.0.45",
+    "chai": "^4.1.0",
     "lerna": "^2.0.0-rc.5",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
+    "replayer": "^2.1.3",
     "rimraf": "^2.6.1",
-    "tslint": "^5.3.2",
-    "typescript": "^2.3.3"
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.1"
   },
   "dependencies": {
     "graphql": "^0.10.3"
