--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "lerna exec -- npm run build",
     "lint": "tslint src/**/*",
     "start": "npm run build && node ./packages/server/dist/index.js",
-    "dev": "nodemon ./dist/index.js",
+    "dev": "nodemon packages/server/dist/index.js",
     "test": "lerna exec -- npm run test",
-    "clean": "rimraf packages/*/node_modules **/.DS_Store",
+    "clean": "lerna clean --yes && rimraf packages/*/dist",
     "release": "lerna publish"
   },
   "keywords": [
