--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
   "license": "ISC",
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
-    "@types/chai": "^4.0.0",
+    "@types/chai": "^4.1.0",
     "@types/debug": "0.0.29",
-    "@types/express": "^4.0.36",
-    "@types/graphql": "^0.10.0",
+    "@types/express": "^4.11.0",
+    "@types/graphql": "^0.11.0",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.9",
-    "@types/request": "0.0.45",
+    "@types/request": "2.0.11",
     "chai": "^4.1.0",
-    "lerna": "^2.0.0-rc.5",
-    "mocha": "^3.4.2",
-    "nodemon": "^1.11.0",
-    "replayer": "^2.1.3",
+    "lerna": "^2.7.0",
+    "mocha": "^4.1.0",
+    "nodemon": "^1.14.0",
+    "replayer": "^2.2.3",
     "rimraf": "^2.6.1",
-    "tslint": "^5.5.0",
-    "typescript": "^2.4.1"
+    "tslint": "^5.9.0",
+    "typescript": "^2.6.1"
   },
   "dependencies": {
-    "graphql": "^0.10.3"
+    "graphql": "^0.11.0"
   }
 }
