--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "body-parser": "^1.18.2",
     "dataloader": "^1.3.0",
     "express": "^4.15.3",
+    "good": "^8.0.0-rc1",
+    "good-console": "^6.4.1",
+    "good-squeeze": "^5.0.2",
     "graphql": "^0.11.0",
     "graphql-server-express": "^1.3.2",
     "graphql-server-hapi": "^1.3.2",
