--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
   "license": "ISC",
   "dependencies": {
     "@creditkarma/graphql-loader": "^0.7.0",
+    "apollo-server-express": "^1.2.0",
+    "apollo-server-hapi": "^1.2.0",
     "body-parser": "^1.18.2",
     "dataloader": "^1.3.0",
     "express": "^4.15.3",
     "graphql": "^0.11.0",
-    "graphql-server-express": "^1.3.2",
-    "graphql-server-hapi": "^1.3.2",
     "graphql-tools": "^2.18.0",
-    "hapi": "^17.2.0",
-    "request": "^2.83.0"
+    "hapi": "^16.6.2",
+    "request": "^2.83.0",
+    "zipkin": "^0.11.2",
+    "zipkin-instrumentation-hapi": "^0.11.2",
+    "zipkin-instrumentation-request": "^0.11.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.3",
