--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "request": "^2.83.0",
     "zipkin": "^0.11.2",
     "zipkin-instrumentation-hapi": "^0.11.2",
-    "zipkin-instrumentation-request": "^0.11.2"
+    "zipkin-instrumentation-request": "^0.11.2",
+    "zipkin-transport-http": "^0.11.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.3",
