--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hapi": "^16.6.2",
     "request": "^2.83.0",
     "zipkin": "^0.11.2",
+    "zipkin-instrumentation-express": "^0.11.2",
     "zipkin-instrumentation-hapi": "^0.11.2",
     "zipkin-instrumentation-request": "^0.11.2",
     "zipkin-transport-http": "^0.11.2"
